; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_xdg_shell.c_get_string_prop.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_xdg_shell.c_get_string_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_view = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.sway_view*, i32)* @get_string_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_string_prop(%struct.sway_view* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.sway_view*, align 8
  %5 = alloca i32, align 4
  store %struct.sway_view* %0, %struct.sway_view** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.sway_view*, %struct.sway_view** %4, align 8
  %7 = call i32* @xdg_shell_view_from_view(%struct.sway_view* %6)
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %29

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  switch i32 %11, label %28 [
    i32 128, label %12
    i32 129, label %20
  ]

12:                                               ; preds = %10
  %13 = load %struct.sway_view*, %struct.sway_view** %4, align 8
  %14 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %3, align 8
  br label %29

20:                                               ; preds = %10
  %21 = load %struct.sway_view*, %struct.sway_view** %4, align 8
  %22 = getelementptr inbounds %struct.sway_view, %struct.sway_view* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  %27 = load i8*, i8** %26, align 8
  store i8* %27, i8** %3, align 8
  br label %29

28:                                               ; preds = %10
  store i8* null, i8** %3, align 8
  br label %29

29:                                               ; preds = %28, %20, %12, %9
  %30 = load i8*, i8** %3, align 8
  ret i8* %30
}

declare dso_local i32* @xdg_shell_view_from_view(%struct.sway_view*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
